// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtMention should match snapshot, no highlight 1`] = `
<Text
  style={Object {}}
>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "yellow",
        },
      ]
    }
  >
    @John.Smith
  </Text>
</Text>
`;

exports[`AtMention should match snapshot, with highlight 1`] = `
<Text
  onLongPress={[Function]}
  onPress={[Function]}
  style={Object {}}
>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "yellow",
        },
      ]
    }
  >
    @John.Smith
  </Text>
</Text>
`;

exports[`AtMention should match snapshot, without highlight 1`] = `
<Text
  onLongPress={[Function]}
  onPress={[Function]}
  style={Object {}}
>
  <Text
    style={Array []}
  >
    @Victor.Welch
  </Text>
</Text>
`;
